# Binary-Classifier

./: .gitignore  CMakeLists.txt  README.md
src/app/: BinaryTree.cpp  BinaryTree.h  BinaryTreeNode.cpp  BinaryTreeNode.h  DataSet.cpp  DataSet.hpp  app.cpp  app.hpp  command.cpp  command.hpp  launcher.cpp  message.cpp  message.hpp
test/: CMakeLists.txt  tester.cpp
